# 714220068_MarianaSiregar

Chapter04/: README.md.txt
Rust/1/Hour2/var1/: var1.rs
Rust/1/Hour2/var2/: var2.rs
Rust/1/Hour2/var3/: var3.rs
Rust/1/Hour2/var4/: var4.rs
Rust/1/Hour2/var5/: var5.rs
Rust/1/Hour2/var6/: var6.rs
Rust/1/Hour2/var7/: var7.rs
Rust/1/Hour2/var8/: var8.rs
Rust/1/Hour3/2_StringAssignment/: string.rs
Rust/1/Hour3/3_ArithmeticalOperators/: aritmatika.rs
Rust/1/Hour3/4_LogicalOperators/: logical.rs
Rust/1/Hour3/5_ComparisonOpeartors/: comparison.rs
Rust/1/Hour3/7_Slice/: slide.rs
Rust/1/Hour4/1_IfStatemen/: if_statement.rs
Rust/1/Hour4/2_If-elseStatement/: ifelseStatement.rs
Rust/1/Hour4/3_Let-IfStatement/: letif_statement.rs
Rust/1/Hour4/4_Loop-BreakStatement/: loop_break.rs
Rust/1/Hour4/5_ForStatement/: for.rs
Rust/1/Hour4/6_WhileStatement/: while.rs
Rust/1/Hour4/7_Tuples/: tuples.rs
Rust/2/Borrowing/: borrowing.rs
Rust/2/Clone/: clone.txt
Rust/2/Dangling/: dangling.rs
Rust/2/Mutable/: mutable.rs
Rust/2/Ownership/: ownership.rs
Rust/2/Reference/: reference.rs
Rust/2/Scope/: scope.rs
Rust/2/Slice/: slice.rs
Rust/3/: enum_dengan_struct.rs  fungsi_untuk_instansiasi.rs  mutable_struct.rs  struct_dalam_struct.rs  struct_dengan_default.rs  struct_dengan_method_impl.rs  struct_generic.rs  struct_sebagai_return_value.rs  struct_sederhana.rs  struct_tuple.rs
Rust/4_dan_5/: Cargo.toml
Rust/4_dan_5/src/: main.rs  math_utils.rs
Rust/6/: kegunaan_crates_io.txt
Rust/7/: perbedaan_membuat_library_dan_file_utama.txt
(+28 files in other folders)
